style(browsingview): fix dark mode style

--- a/src/renderer/css/darkmode/DownloadList.scss
+++ b/src/renderer/css/darkmode/DownloadList.scss
@@ -103,7 +103,7 @@
         background: #54545A;
       }
       &:focus-within {
-        border-color: rgba(255, 255, 255, 0.7);
+        border-color: rgba(255, 255, 255, 0.4);
         background: #54545A;
       }
       input {
@@ -116,7 +116,7 @@
       }
     }
     .definition-content {
-      border-color: rgba(255, 255, 255, 0.7);
+      border-color: rgba(255, 255, 255, 0.4);
       background: #54545A;
       .definition-item {
         background: #54545A;
